...
        button.setTitleColor(.ypBlack, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.backgroundColor = .ypWhite
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        
        button.accessibilityIdentifier = "Authenticate"
        button.addTarget(self, action: #selector(navigateToAuthScreen), for: .touchUpInside)
        
        return button
    }()
    
    // MARK: - Lifecycle
...
