...
    private lazy var likeButton: UIButton = {
        var button = UIButton()
        button.setImage(UIImage(named: "like_button_inactive"), for: .normal)
        button.tintColor = .ypWhite
        
        button.isAccessibilityElement = true
        button.accessibilityLabel = "like button"
        button.addTarget(self, action: #selector(didTapLikeButton), for: .touchUpInside)
        return button
    }()
    
    private lazy var cellImage: UIImageView = {
        var imageView = UIImageView()
...
